--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name": "tvshowinfo",
-  "main": "main.js"
+  "main": "main.js",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-uglify": "^2.0.1"
+  }
 }
