--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "tvshowinfo",
   "main": "main.js",
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-html-replace": "^1.6.2",
     "gulp-uglify": "^2.0.1"
+  },
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "font-awesome": "^4.7.0",
+    "localforage": "^1.5.0",
+    "moment": "^2.17.1",
+    "normalizecss": "^3.0.0"
   }
 }
