--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-html-replace": "^1.6.2",
+    "gulp-minify-ejs": "^1.0.3",
     "gulp-uglify": "^2.0.1"
   },
   "dependencies": {
